# libSet

./: .gitignore  CMakeLists.txt  README.md
Set.xcodeproj/: project.pbxproj
Set.xcodeproj/project.xcworkspace/xcuserdata/thahnen.xcuserdatad/: UserInterfaceState.xcuserstate
Set.xcodeproj/xcshareddata/xcschemes/: Set.xcscheme
Set.xcodeproj/xcuserdata/thahnen.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: ll.h  set.h  type.h
libSet/: CMakeLists.txt
libSet/Set.xcodeproj/: project.pbxproj
libSet/Set.xcodeproj/project.xcworkspace/xcuserdata/thahnen.xcuserdatad/: UserInterfaceState.xcuserstate
libSet/Set.xcodeproj/xcshareddata/xcschemes/: Set.xcscheme
libSet/Set.xcodeproj/xcuserdata/thahnen.xcuserdatad/xcschemes/: xcschememanagement.plist
libSet/include/: ll.h  set.h  type.h
libSet/samples/: Test.c
libSet/src/: set.c
libSet/tests/: Unittests.c  Unittests.h  test_set_create.c  test_set_empty.c
src/: set.c
tests/: Unittests.c  Unittests.h  test_set_add.c  test_set_max.c  test_set_min.c
